[gd_scene load_steps=14 format=3 uid="uid://b3ioob0g7m7ks"]

[ext_resource type="Script" path="res://worker.gd" id="1_sw1sg"]
[ext_resource type="Texture2D" uid="uid://ckl6f2ibslqq4" path="res://splatter.png" id="2_2ew75"]
[ext_resource type="Texture2D" uid="uid://chn0hfmqq7ngx" path="res://enemy_sprite_worker_leftleg.png" id="2_3dcfi"]
[ext_resource type="Texture2D" uid="uid://ceqxtiuxtkd6x" path="res://enemy_sprite_worker_rightleg.png" id="3_k0alt"]
[ext_resource type="Texture2D" uid="uid://boft6j7spo5ca" path="res://enemy_sprite_death.png" id="4_x5x8e"]
[ext_resource type="AudioStream" uid="uid://bj5b2m0dmc71d" path="res://death.wav" id="5_506rq"]
[ext_resource type="AudioStream" uid="uid://byx5mxlpv5jsb" path="res://WorkerDeathSounds/WorkerDeath1.wav" id="7_fnji4"]
[ext_resource type="AudioStream" uid="uid://butn82gso72cg" path="res://WorkerDeathSounds/WorkerDeath2.wav" id="8_0rm8s"]
[ext_resource type="AudioStream" uid="uid://d3ub6dyalgiee" path="res://WorkerDeathSounds/WorkerDeath3.wav" id="9_w6wca"]
[ext_resource type="AudioStream" uid="uid://bi0j2xy86rty" path="res://WorkerDeathSounds/WorkerDeath4.wav" id="10_iipjk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_54b51"]
radius = 237.079

[sub_resource type="SpriteFrames" id="SpriteFrames_buy24"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3dcfi")
}, {
"duration": 1.0,
"texture": ExtResource("3_k0alt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rgnuj"]
streams_count = 4
random_volume_offset_db = 1.64
stream_0/stream = ExtResource("7_fnji4")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_0rm8s")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_w6wca")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_iipjk")
stream_3/weight = 1.0

[node name="Worker" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_sw1sg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
scale = Vector2(0.506818, 1.483)
shape = SubResource("CircleShape2D_54b51")

[node name="Graphics" type="Node2D" parent="."]
scale = Vector2(1, 0.98223)

[node name="Alive" type="AnimatedSprite2D" parent="Graphics"]
position = Vector2(-15, -18.3256)
scale = Vector2(0.203975, 0.203975)
sprite_frames = SubResource("SpriteFrames_buy24")

[node name="Dead" type="Sprite2D" parent="Graphics"]
visible = false
z_index = -1
scale = Vector2(0.17, 0.17)
texture = ExtResource("4_x5x8e")

[node name="Splatter" type="Sprite2D" parent="Graphics/Dead"]
visible = false
show_behind_parent = true
position = Vector2(11, -3)
texture = ExtResource("2_2ew75")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_506rq")
max_distance = 3e+07
bus = &"sfx"

[node name="DeathCullTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="WorkerDeathSounds" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rgnuj")
volume_db = 5.622
max_distance = 11650.0
attenuation = 0.277392
bus = &"sfx"

[connection signal="timeout" from="DeathCullTimer" to="." method="_on_death_cull_timer_timeout"]
